Data Ingestion added

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -214,6 +214,85 @@
    "source": [
     "get_prodict(x='5', y=7)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download data from google drive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://drive.google.com/file/d/1DUVYtrQgZg4Y8I-XiLnP0BBzvtnMPBQy/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1DUVYtrQgZg4Y8I-XiLnP0BBzvtnMPBQy'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id = url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1DUVYtrQgZg4Y8I-XiLnP0BBzvtnMPBQy\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1DUVYtrQgZg4Y8I-XiLnP0BBzvtnMPBQy&confirm=t&uuid=cfbfcadc-e582-4070-a95c-3abad2066712\n",
+      "To: c:\\iNeuron LLM Projects\\Kidney-Disease-Classification\\research\\Kidney-CT-Scan.zip\n",
+      "100%|██████████| 940M/940M [00:31<00:00, 29.7MB/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Kidney-CT-Scan.zip'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = 'https://drive.google.com/uc?/export=download&id='\n",
+    "\n",
+    "gdown.download(prefix+file_id, 'Kidney-CT-Scan.zip')"
+   ]
   }
  ],
  "metadata": {
